prefix / game end process